# Chess

./: .gitignore  .gitmodules  AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  Chess.cpp  Chess.h  Chess.rc  ChessDoc.cpp  ChessDoc.h  ChessView.cpp  ChessView.h  ComputerPlayer.cpp  ComputerPlayer.h  Doxyfile  GameRecordEntry.cpp  GameRecordEntry.h  LICENSE  MainFrm.cpp  MainFrm.h  NewGameDialog.cpp  NewGameDialog.h  Player.cpp  Player.h  Player.inl  StdAfx.cpp  StdAfx.h  YourTurnDialog.cpp  YourTurnDialog.h  main.cpp  resource.h
BitBoard/: BitBoard.cpp  BitBoard.h  CMakeLists.txt
BitBoard/test/: CMakeLists.txt  test-BitBoard.cpp  test-Placeholder.cpp
Chess/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  GameState.cpp  GameState.h  King.cpp  King.h  Knight.h  Move.cpp  Move.h  Pawn.cpp  Pawn.h  Piece.h  Position.cpp  Position.h  Queen.h  ResponseGenerator.cpp  ResponseGenerator.h  Rook.h  StaticEvaluator.cpp  StaticEvaluator.h  Types.h  ZHash.cpp  ZHash.h
Chess/test/: CMakeLists.txt  test-Placeholder.cpp  test-ZHash.cpp
ComputerPlayer/: CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.h  GameTree.cpp  GameTree.h  Sequence.cpp  Sequence.h  Sequence.inl  StaticEvaluator.cpp  StaticEvaluator.h  TranspositionTable.cpp  TranspositionTable.h
GamePlayer/: CMakeLists.txt  GameTree.cpp  GameTree.h  TranspositionTable.cpp  TranspositionTable.h
GamePlayer/include/GamePlayer/: GameState.h
GameState/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  Board.inl  CMakeLists.txt  ChessTypes.h  GameState.cpp  GameState.h  GameState.inl  King.cpp  King.h  Knight.cpp  Knight.h  Move.cpp  Move.h  Move.inl  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PieceList.cpp  PieceList.h  Position.cpp  Position.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
OpeningProcessor/: CMakeLists.txt  ECOextended.txt  Main.cpp  OpeningProcessor.vcproj  OpeningProcessor.vcproj.7.10.old  OpeningProcessor.vcxproj  main.cpp
Player/: CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.h  GameTree.cpp  GameTree.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  Player.inl  Sequence.h  Sequence.inl  TranspositionTable.cpp  TranspositionTable.h
StaticEvaluator/: CMakeLists.txt  StaticEvaluator.cpp  StaticEvaluator.h
ZHash/: CMakeLists.txt  ZHash.cpp  ZHash.h  ZHash.inl
ZHash/test/: CMakeLists.txt  test-Placeholder.cpp  test-ZHash.cpp
